--- a/of/app/views/news/_news_list.html.erb
+++ b/of/app/views/news/_news_list.html.erb
@@ -10,7 +10,7 @@
     <% for news in @news %>
       <li>
         <%=link_to h( news.subject ), news1_path( :id => news.id, :project_id => news.catid ), :class => "news_subject" %>
-        <%=news.updated_at.strftime "%Y-%m-%d" %>
+        <%=news.updated_at.try(:strftime, "%Y-%m-%d") %>
       </li>
     <% end %>
   </ul>
