--- a/trunk/of/public/stylesheets/openfoundry.css
+++ b/trunk/of/public/stylesheets/openfoundry.css
@@ -105,7 +105,7 @@
 #tag_cloud a {
   padding:5px;
 }
-.highlight, .match {color: #ff8716;}
+.highlight, .match {color: #ff8716; font-weight: bold;}
 
 
 /* module */
