--- a/trunk/of/config/application.rb.erb
+++ b/trunk/of/config/application.rb.erb
@@ -44,8 +44,8 @@ module OpenFoundry
     config.root_path = "/of"
     config.action_controller.asset_path = "#{config.root_path}%s"
 
-    config.cache_store = :mem_cache_store, '192.168.3.83:11211',
-      { :namespace => "of-#{Rails.env}", :expires_in => 8.hours, :compress => true, :compress_threshold => 64*1024 }
+    config.cache_store = :mem_cache_store, '<%=session_memcache_server%>',
+      { :namespace => "<%=session_memcache_namespace%>", :expires_in => 8.hours, :compress => true, :compress_threshold => 64*1024 }
 
     # Include your application configuration below
     require 'user_environment'
