--- a/of/app/views/citations/show.html.erb
+++ b/of/app/views/citations/show.html.erb
@@ -7,7 +7,7 @@
   <dt><label><%= _('Citation|Url') %></label></dt>
   <dd><%= h(@data_item.url) %></dd>
   <dt><label><%= _('Citation|Release date') %></label></dt>
-  <dd><%= h(@data_item.release_date) %></dd>
+  <dd><%= h(@data_item.release_date_string) %></dd>
   <dt><label><%= _('Citation|Release version') %></label></dt>
   <dd><%= h(@data_item.release_version) %></dd>
 </dl>
