Modify Low & Licensing menu.

--- a/of/app/views/layouts/integration.html.erb
+++ b/of/app/views/layouts/integration.html.erb
@@ -108,13 +108,13 @@
                   <a class="orphan item bullet" href="<%="#{ root_path }" %>"><span><%=_('Projects')%></span></a>
                 </li>
                 <li class="item root">
-                  <a class="orphan item bullet" href="/community"><span><%=_('Community')%></span></a>
+                  <a class="orphan item bullet" href="/community"><span>Who's Who</span></a>
                 </li>
                 <li class="item root">
                   <a class="orphan item bullet" href="/news"><span><%=_('News')%></span></a>
                 </li>
                 <li class="item root">
-                  <a class="orphan item bullet" href="/law-and-licenses"><span><%=_('Law and Licenses')%></span></a>
+                  <a class="orphan item bullet" href="/law-and-licenses"><span><%=_('Law & Licensing')%></span></a>
                 </li>
                 <li class="item root">
                   <a class="orphan item bullet" href="/workshop"><span><%=_('Workshop')%></span></a>
