--- a/of/app/views/survey/index.html.erb
+++ b/of/app/views/survey/index.html.erb
@@ -23,11 +23,11 @@
 <fieldset style="width:48%; height:400px;">
   <legend>
     <%= s_('survey|Project Surveys')%>
-    <img id="Survey_Loading" width="15px" height="15px" src="/images/ajax-loader.gif" style="display:none"/>
   </legend>
   <input type="button" value="<%= s_('survey|Apply') %>" onclick="applySurvey();">
   <input type="button" value="<%= s_('survey|Remove') %>" onclick="removeSurvey();">
   <input type="button" value="<%= s_('survey|Reset') %>" onclick="resetSurvey();">
+  <img id="Survey_Loading" width="26px" height="26px" src="<%=OPENFOUNDRY_OF_URL %>images/ajax-loader.gif" style="vertical-align: middle; display:none"/>
   <div class="" id="ProjectSurvey" style="overflow:auto; height:360px;">
     <%= render :file => 'app/views/survey/show.html.erb', :layout => nil,
       :locals => {:survey_items => @survey_items, :item_status => @item_status,
