Download counter & log by ayamomiji. File list summary below.
M       app/helpers/application_helper.rb -> hash_try_chain
?       app/metal/counter_log_flusher.rb -> redis log & count write to DB
?       app/models/counter.rb -> counter's ohm Model
?       app/models/counter_log.rb -> log's ohm Model
?       app/models/archived_counter_log.rb -> log's DB Model
M       app/models/release.rb -> Counter for release
M       app/models/project.rb -> Counter for project
M       app/models/fileentity.rb -> Counter for fileentity
M       app/controllers/projects_controller.rb -> def find_by_id_or_name, get project json data
M       app/controllers/releases_controller.rb -> get release & file json data
M       app/controllers/site_admin/site_admin_controller.rb -> counter log admin
M       app/controllers/openfoundry_controller.rb -> download count with new counter
M       app/views/projects/_list.html.erb -> download wiht new counter
M       app/views/releases/download.html.erb -> download wiht new counter
?       app/views/site_admin/site_admin/search_counter_logs_index.html.erb -> download log search & export
M       app/views/site_admin/site_admin/index.html.erb -> Add Menu in site_admin (wrong: this title is wrong)
?       db/migrate/20110322022528_change_for_archived_counter_logs.rb -> modify archived_counter_logs fields
?       db/migrate/20110311014409_create_archived_counter_logs.rb -> create archived_counter_logs table
M       config/routes.rb -> new routes
M       Gemfile -> new gems
M       public/stylesheets/openfoundry.css -> new CSS

--- a/app/views/releases/download.html.erb
+++ b/app/views/releases/download.html.erb
@@ -31,7 +31,7 @@
                                                   :release_version => release.version,
                                                   :file_name => file.path ) %></b><br/>
                <div id="file-<%= file.id %>" class="description" style="display: none">
-          <%= "#{number_to_human_size(file.size)}, " + _("Downloads Hits") + file.file_counter.to_s %><br/>
+          <%= "#{number_to_human_size(file.size)}, " + _("Downloads Hits") + file.counter.counter.to_s %><br/>
           <%= h(file.description) %>
         </div>
       </td>
