--- a/trunk/of/app/views/site_admin/site_admin/index.html.erb
+++ b/trunk/of/app/views/site_admin/site_admin/index.html.erb
@@ -42,6 +42,7 @@
 <h2>NSC相關</h2>
 <ul>
   <li><%= link_to _("Report status"), nsc_report_status_path %></li>
+  <li><%= link_to _("Counter logs"), site_admin_admin_search_counter_logs_index_path %></li>
   <li><%= link_to _("Download count"), nsc_download_count_path %></li>
   <li><%= link_to _("Download List"), site_admin_admin_nsc_download_path %></li>
 </ul>
