--- a/trunk/of/public/stylesheets/openfoundry.css
+++ b/trunk/of/public/stylesheets/openfoundry.css
@@ -79,6 +79,14 @@
   { margin-left:-20px; display:block; }
 #ProjectNew p, #ProjectEdit p, #ProjectEdit fieldset, .form-padding
   { padding-left:20px; }
+.pj_name {font-size:20px; font-weight:800;}
+.summary {font-size:12px;font-weight:bold; }
+.pj_logo {
+  float:left;
+  padding:0.2em 0 0 0.5em;
+  margin:0 1em 0 5px;
+}
+
 /*#ProjectList img { width:32px; height:32px; display:none; }*/
 .ProjectList { border-collapse:collapse; width:100%; margin:0.4em; word-wrap: break-word; }
 .ProjectList th a { color:#3d3a3a;}
@@ -287,7 +295,7 @@ width:500px;
   }
 
 /* for dashboard start */
-.severity{border:1px solid #000;padding:1.5px; margin-right:5px;color:#000;}
+.severity{border:1px solid #000;padding:1.5px; margin-right:10px;color:#000;}
 .P1{background-color:#FF6F6F;}
 .P2{background-color:#FFAFAF;}
 .P3{background-color:#FFE8BF;}
@@ -298,27 +306,36 @@ width:500px;
   display:block;
   position:absolute;
   left:190px;
-  top:25px;
   width:16px;
   height:16px;
+  top:25px;
   background: url('/of/images/help.png') no-repeat;
 }
-
+.ticket_info {
+  font-size: 12px;
+  margin-left:33px;
+}
+.ticket {
+  margin-top:2px;
+  border-bottom:solid 1px #cdcdcd;
+}
+.pa{
+  font-weight:bold;
+}
 table#project_list {
   margin:0;
   padding:0;
 }
 #project_list td.showDragHandle{ 
-  /*background: none repeat scroll 0 0 #f9f9f9;*/
   border: 1px solid #CCCCCC;
   background:url(/of/images/move_alt.png) no-repeat right 10px;
-/*  padding:3px; */
 }
-#project_list p{margin-top:25px;padding-bottom:15px;}
-#project_list h3{display:inline;}
+#project_list p{margin-top:8px;padding-bottom:28px; }
+#project_list h3{display:inline; margin-left:10px;}
 #project_list td.showDragHandle div{display:inline;}
-#project_list p a{display:block;padding:2px 10px;font-weight:bold;color:#404040;float:left;margin-left:10px;background:#CCC;}
+#project_list p a{display:block;padding:2px 7px;font-weight:bold;color:#404040;float:left;margin-left:10px;background:#CCC;}
 #project_list p a:hover {color:#0088B5}
+#project_list td {vertical-align:middle;border-bottom:solid 1px #cdcdcd;}
 /*for dashboard end*/
 
 /* for layout of news list */
