--- a/of/app/views/layouts/application.html.erb
+++ b/of/app/views/layouts/application.html.erb
@@ -55,12 +55,12 @@
   <div id="MiddlePane">
     <div class="rt-grid-12">
       <% if @project.try(:persisted?) && !controller.action_name['change_status_form'] %>
-       <div class="pj_logo" >
+        <div class="pj_logo" >
           <a href="<%= project_path(@project) %>">
-            <img src="<%= cached_image_images_path(:id => "#{@project.icon}_64") %>" style="vertical-align: middle;" width=48 />
-	  </a>
-       </div>
-       <div style="width: 860px; float: right; word-wrap: break-word; word-break: break-all;">
+             <img src="<%= cached_image_images_path(:id => "#{@project.icon}_64") %>" style="vertical-align: middle;" width=48 />
+          </a>
+        </div>
+        <div style="width: 860px; float: right; word-wrap: break-word; word-break: break-all;">
           <div class="pj_name">
             <a href="<%= project_path(@project) %>">
             <%= h(@project.name) %>
@@ -72,44 +72,43 @@
           <div class="summary">
             <%= h(@project.summary) %>
           </div>
-        <%if current_user.has_role?('Admin',Project.find_by_id(params["project_id"]))%>
-          <%= image_tag "green_arrow_right.gif" %>
-          <a href="#" onclick="Effect.toggle('UploadImage','appear'); return false"><%=_('Change Icon')%></a>
-        <%end%>
-          <%= render :partial => 'images/edit', :locals =>
-	  {:image_id => @project.icon, :id => @project.id, :type => 'Project', :back_to => project_path(@project) } %>
-       </div>
+          <%if current_user.has_role?('Admin',Project.find_by_id(params["project_id"]))%>
+            <%= image_tag "green_arrow_right.gif" %>
+            <a href="#" onclick="Effect.toggle('UploadImage','appear'); return false"><%=_('Change Icon')%></a>
+          <%end%>
+          <%= render :partial => 'images/edit', :locals => {:image_id => @project.icon, :id => @project.id, :type => 'Project', :back_to => project_path(@project) } %>
+        </div>
       <%end%>
     </div>
     <% string = request.path -%>
     <% match = !string.match(/site_admin/).nil?-%>
-    <% if match == true || ( controller.controller_name == 'openfoundry' && controller.action_name == 'search' ) -%> 
+    <% if match == true || ( controller.controller_name == 'openfoundry' && controller.action_name == 'search' ) -%>
       <div id="MainContent" class="rt-grid-12">
-    <% else -%> 
+    <% else -%>
       <div id="MainContent" class="rt-grid-9 rt-push-3">
-    <% end -%>    
-        <div id="Flash"><%= raw show_flash %></div>
-        <%= content_for?(:module) ? yield(:module) : yield %>
-      </div>
+    <% end -%>
+      <div id="Flash"><%= raw show_flash %></div>
+      <%= content_for?(:module) ? yield(:module) : yield %>
+    </div>
+
     <% if match == true -%> 
-        <div id="LeftWidget" style="display:none;">
+      <div id="LeftWidget" style="display:none;">
     <% else -%> 
-        <div id="LeftWidget" class="rt-grid-3 rt-pull-9">
-    <% end -%> 
-    	<% if @project.try(:persisted?) # Ensure there is a project entity and it is persisted %>
-          <%=render :partial => "news/news_list", :locals => {:project => @project}%>
-          <%#=render :partial => "partials/project_logo", :locals => {:project => @project}%>
+      <div id="LeftWidget" class="rt-grid-3 rt-pull-9">
+      <% if @project.try(:persisted?) # Ensure there is a project entity and it is persisted %>
+        <%=render :partial => "news/news_list", :locals => {:project => @project}%>
         <div id="LeftMenu">
-		<%=render :partial => "partials/project_menu", :locals => {:project => @project}%>
-		<%=render :partial => "partials/qrcode_project", :locals => {:project => @project}%>
+          <%=render :partial => "partials/project_menu", :locals => {:project => @project}%>
+          <%=render :partial => "partials/qrcode_project", :locals => {:project => @project}%>
         </div>
       <%elsif controller.controller_name == "user"%>
-          <%=render :partial => "partials/dashboard_menu", :locals => {:project => @project}%>
+        <%=render :partial => "partials/dashboard_menu", :locals => {:project => @project}%>
       <%elsif controller.controller_name == "help"%>
         <%=render :partial => "partials/help_menu"%>
       <%else%>
         <%=render :partial => "partials/homeleft" unless ( controller.controller_name == 'openfoundry' && controller.action_name == 'search' ) || ( controller.controller_name == 'site_admin' && controller.action_name == 'manage_tags' )  %><%#TODO CodeReview! (2011/01/13)%>
       <%end%>
+    <% end -%> 
     </div>
   </div>
   <br clear="all" />
