--- a/of/app/views/project_notify/approved.html.erb
+++ b/of/app/views/project_notify/approved.html.erb
@@ -1,13 +1,14 @@
 <p>
-Your project has been created!< br />
+Your project has been created!<br />
 Please visit the following URL: <%= @project_url %><br />
 <br />
 <% if @replymessage != "" -%>
 -----------------------------------------------------------------------------------<br />
-<br />
-<%= @replymessage %><br />
-<br />
+<pre>
+<%= @replymessage %>
+</pre>
 -----------------------------------------------------------------------------------<br />
 <% end -%>
 <br />
 OpenFoundry<br />
+</p>
